@@ -6,8 +6,8 @@ AUX gitlab-workhorse.init 654 SHA256 c7118997a4da198c477120a544969bdcb36404da871
 DIST gitlab-workhorse-0.7.10.tar.bz2 29153 SHA256 df2c81175abe11608df89e1965f4f823f3cd0cac1650cce3bc2c6927dbda0b28 SHA512 17028df034b0fc5063f1ef1067061d1f3e2f38b7848daf242d806cf0abc1e97ebc7fce269c472ef450ba7d33e720554edcc300e1902d71b7b518fb67ee4abb5f WHIRLPOOL a1f5d056509a624279da526bd3a7b134177aafdec66467d121f050f2355406b3bd81a4fa6b7e4f81cc273dee7010e59a61986e69810fe766bf6322f741ff9515
 DIST gitlab-workhorse-0.7.11.tar.bz2 29401 SHA256 54515f030664e33ae3925d9a85c4fe166fb6316752d819f51cb592f553284b4c SHA512 3f8c8b46f60f13a8d747eb92d42db7d7dae133813df34b263ddc87aef04592888532c1f07c9eeed5eb708af8232a2a98a382e056ff184d61547be68ba55da4e9 WHIRLPOOL a4b17b2784e428ea092c76a3a3ba410565fb3c08c47ef542ddcc126785f3eda837b9462311944be1145076fcecc3da51029cef795c3db7b342e8d95606acfde9
 DIST gitlab-workhorse-0.7.8.tar.bz2 28253 SHA256 0823495288304a4e2c6491fb011d509ccabea8af765bd35e47e6e5b1da52a599 SHA512 392d1a11da1f61fa5e319d8cf5fc2f158cbc90baaedbd98f33a992cc938f67efe5837e9731c8b4b8d1e8265620c5ae69ced3326eb376aa1cc691457eb6fbc002 WHIRLPOOL fa61930d4a8ecad35b3d27f46da731623f6e41898485d564403ee53badd793824afdf1376c0e0cf6e2e6e30cbf205091db3e416841f60bf6ff905504714ca1be
-EBUILD gitlab-workhorse-0.7.10.ebuild 918 SHA256 62e03ff726da9c3b850d58b1b94d7006ccbe6a49318cb5c4934e02c4da7c1ea9 SHA512 93faa1ae71c6832bbaa296c4c3f1f5added09e15580715d8968fbda8e8a67418f66fd257185628d6abafdf3a66f5a93a4a7743c2a7d0966c08a21566045f04e7 WHIRLPOOL ef78add24d1455e41c61855dc6b1f386036505cb468400f8e8f5b0dde45909713fed363dcc82f5164966568a0e4287eb848ba8cdfa24d720714421b3cfad6883
-EBUILD gitlab-workhorse-0.7.11.ebuild 918 SHA256 501c08b40c03de53309266ab1904e7a4de58f13a42020dfba1cebfaf62dfd7aa SHA512 71ccca01b865f262c8df7e2e79f1878ea671ff5430802cc85d333186e24758c74972171e11d5cf0b61d11d067d4350f3dbcc0325ea78f06482c4af85158ad42f WHIRLPOOL 99ee5476e5f290b520a19666dc62c0d786a25844027dfb71c9f9297eb0d5d951e17ed89030be2a1bfb837887d9f7250c8f0b9aca55c7551fc1aa9c27ecc731af
-EBUILD gitlab-workhorse-0.7.8.ebuild 918 SHA256 e3d95d2e627772b1bb034134890e1f9422ad419d2ac57e55337a16e68b847466 SHA512 ee391c4ec21da9a04f1abbca7067aa3dd70b405cb271fab417ea7d023cbe874b05f70d1dd5f08f6d75bb7a16d02d80e0634aad3848dc3cdf95a9c6da8448fc62 WHIRLPOOL 7e27afa5c674c931dd96e1df0b1f2e74741039025d9c2f8937589a52af62acdec46f41eff201404904d5c7b1f7748aeaea091196a68ec7b2f9758f4bad519e34
-MISC ChangeLog 1952 SHA256 3ea7d89202cc68caa1172ac382d0c9fdee468a4d34029cd101b0dc6819824007 SHA512 e46e881572c8f1052d6ce3a5e3e9f4d4457c339bedc4bb8354d8a3f93da9d1d44c95c5067ae362d37c2f3f8b25546deaeb23c206ce8c2ed99cd6fa4a0c28f419 WHIRLPOOL 2fdd3158363822813870942b3ca107b14711a366c0816b9e8e81a4ea4a6bb8a8b8193b308478b5c864715d97a0fee020edf1aef979ec86f24661cb684fad9f2c
+EBUILD gitlab-workhorse-0.7.10.ebuild 918 SHA256 c2806880e26561389e7f5a4c0e2d4b7a3d861bbfb5bf9f9730a1ab237d9b3f9f SHA512 069c7c333e34c48ab5cd59db58d21a8f42910c45c03bacd8e0476e41da68c34a743d5a6f6b26b6c9504c425212577c23904270a59205234afc5f9bb0d543b40c WHIRLPOOL e92bc053a0fea97919e826bf6e5e98b09887cc9e6cba5ddda5839c4c5c99fee216980ace4d978cc7763c1a1982dfe0236230de48473e5990d6bc95b52860531f
+EBUILD gitlab-workhorse-0.7.11.ebuild 918 SHA256 5e59b0da6aa0344f72a59360743f95860e09e5ab937b72061f9760a64f86f932 SHA512 1263b50260ebe620d57c0028dc64597062918a6ca17eac7417a2a5774537eba2de44ec64431fd9d22e063250637908ea05d8139c38b3ff81c2fdaad904f0c0e9 WHIRLPOOL 0c503731f0164d6f479a60fa6424d8be3368ec98d9e5f3de3c52fec3322c61de379eb7342dd9be892d53972a20065d7a37e26b827a9efe0c61a2a3a7fa7bb298
+EBUILD gitlab-workhorse-0.7.8.ebuild 918 SHA256 f43ddb02be14989156e31ca4089a2ddb3bee814e044137b7cbb13cfcc635131b SHA512 b3a9b1e5cd76e4d9170c18137ff391159630b7ab14577b2ba66a3a419cca66042c9851978f8c8cd442f51548c36e020b831512f03a3e9ce30a730f4afb256e83 WHIRLPOOL 4a7d48749a143447a20b6cfdd4dddb5fd32e4f503cb4ab0fea6723d8b8cdf1be8c3cfbc32142f234f5434683c01869d6e922ebcf1d1f6c0cc026110d5a07382e
+MISC ChangeLog 2152 SHA256 0247334313016f5bfc64d26937e701429ac07901e0981205eea87cb46fae05b3 SHA512 bbbb970dd6bc51ee113f586726b75ab1ae94ca63c2d131c99c4433693c69ddaa57b9b627996b91fc618a46fb61d1fc63311d8f31e68df41ba75b884507548cbc WHIRLPOOL f34ed692a81212e77fa8e25f9f523e2b276881c0370452eeabbe77fbae4dfaccef3292bec4c3a9aa7b6cabecbca9bb869c52426b3e43069eb404a969da87a1b2
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
